Add tmp directory to app repository.

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 
 # Игнорирование всех логов и временных файлов.
 /log/*.log
-/tmp
+/tmp/*
 
 # Игнорирование прочих ненужных файлов.
 # database.yml
